# codex-account-switcher

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  build.rs  package-lock.json  package.json
.cargo/: config.toml
.github/: copilot-instructions.md
.nlsdd/: executor.sqlite
NLSDD/: AGENTS.md  scoreboard.md
ai-rules/: adoption-workflow.md  before-new-mvc-assess-existing-dirty-tree.md  choose-agents-skill-script-or-runbook.md  commit-each-minimum-viable-change.md  distinguish-rule-suggestions-from-established-process-state.md  shared-baseline-sync-and-local-adoption.md  shared-rules-entry-and-thin-adapters.md  surface-stale-untracked-governance-files-at-stop.md  verify-third-party-module-interface-before-integration.md
docs/: cli.md
plan/: 2026-03-19-tui-limits-visual-plan.md  2026-03-20-adaptive-prompt-density-implementation-plan.md  2026-03-20-multi-phase-routing-plan.md  2026-03-20-ratatui-plot-mode-implementation-plan.md  2026-03-21-nlsdd-meta-optimization-plan.md  2026-03-22-nlsdd-dev-flow-improvement-plan.md  2026-03-22-nlsdd-worker-telemetry-implementation-plan.md  2026-03-22-plot-mode-reactivation-plan.md  AGENTS.md
reseach/: codex-limit-status.md
rust/plot-viewer/: Cargo.toml  build.rs
rust/plot-viewer/src/: app.rs  app_data.rs  claude.rs  copilot.rs  cron.rs  input.rs  lib.rs  loader.rs  main.rs  model.rs  paths.rs  store.rs  usage.rs
rust/plot-viewer/src/render/: chart.rs  mod.rs  panels.rs
rust/plot-viewer/tests/: rust_cli_migration.rs
scripts/: debug-claude-refresh.sh  install-pld-plugin.sh  link-dev-bin.cjs  nlsdd-compose-message.cjs  nlsdd-lib.cjs  nlsdd-probe-lane.cjs  nlsdd-suggest-refill.cjs  nlsdd-suggest-schedule.cjs  unlink-dev-bin.cjs  verify-claude-live.sh
spec/: 2026-03-19-tui-limits-implemented.md  2026-03-20-prompt-panel-layout.md  AGENTS.md
src/: app.rs  app_data.rs  claude.rs  copilot.rs  cron.rs  cursor_ingest.rs  duration.rs  index.ts  input.rs  lib.rs  loader.rs  main.rs  paths.rs  refresh_log.rs  store.rs  usage.rs
src/db/: mod.rs  (+2 more)
tasks/: lessons.md  todo-archive.md  todo.md
(+113 files in other folders)
