[package]
name = "agent-switch"
version = "0.1.0"
edition = "2021"
publish = false
description = "Rust TUI for agent profile management and usage plots"

[dependencies]
anyhow = "1"
base64 = "0.22.1"
chrono = "0.4.44"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
dialoguer = "0.11"
fs2 = "0.4"
notify = "8"
ratatui = "0.30"
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
tokio-rusqlite = "0.6"
tungstenite = { version = "0.23", default-features = false, features = ["handshake", "rustls-tls-webpki-roots"] }
which = "6"

[[bin]]
name = "cursor-export"
path = "src/bin/cursor_export.rs"
