[package]
name = "codex-auth"
version = "0.1.0"
edition = "2021"
publish = false
description = "Rust TUI for Codex auth profile management and usage plots"

[dependencies]
anyhow = "1"
crossterm = "0.29"
ratatui = "0.30"
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
